--- a/index.html
+++ b/index.html
@@ -46,24 +46,31 @@
                     <p>Vivamus sed libero nec mauris pulvinar facilisis ut non sem. Quisque mollis ullamcorper diam vel faucibus. Vestibulum sollicitudin facilisis feugiat. Nulla euismod sodales hendrerit. Donec quis orci arcu. Vivamus fermentum magna a erat ullamcorper dignissim pretium nunc aliquam. Aenean pulvinar condimentum enim a dignissim. Vivamus sit amet lectus at ante adipiscing adipiscing eget vitae felis. In at fringilla est. Cras id velit ut magna rutrum commodo. Etiam ut scelerisque purus. Duis risus elit, venenatis vel rutrum in, imperdiet in quam. Sed vestibulum, libero ut bibendum consectetur, eros ipsum ultrices nisl, in rutrum diam augue non tortor. Fusce nec massa et risus dapibus aliquam vitae nec diam.</p>
                     <p>Phasellus ligula massa, congue ac vulputate non, dignissim at augue. Sed auctor fringilla quam quis porttitor. Praesent vitae dignissim magna. Pellentesque quis sem purus, vel elementum mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas consectetur euismod urna. In hac habitasse platea dictumst. Quisque tincidunt porttitor vestibulum. Ut iaculis, lacus at molestie lacinia, ipsum mi adipiscing ligula, vel mollis sem risus eu lectus. Nunc elit quam, rutrum ut dignissim sit amet, egestas at sem.</p>
                 </article>
+                <article>
+                    <p><img src="images/chincheta.png" alt="chincheta"/></p>
+                    <p></p>
+                </article>
                 <aside>
                     <h1>About the author</h1>
                     <img src="images/arrow.png" alt="" id="arrow" />
                     <p id="zozor_picture"><img src="images/zozor.png" alt="Zozor Picture" /></p>
                     <p>Let me introduce myself: My name's Zozor. I was born on 23 November 2005.</p>
                     <p>A bit meager, is it not? This is why I've now decided to write my biography to let my readers know who I really am.</p>
-                    <p><img src="images/facebook.png" alt="Facebook" /><img src="images/twitter.png" alt="Twitter" /><img src="images/vimeo.png" alt="Vimeo" /><img src="images/flickr.png" alt="Flickr" /><img src="images/rss.png" alt="RSS" /></p>
+                    <p><img src="images/pinterest.png" alt="Pinterest"/><a href="https://es-es.facebook.com"><img src="images/facebook.png" alt="Facebook" /></a><img src="images/twitter.png" alt="Twitter" /><img src="images/vimeo.png" alt="Vimeo" /><img src="images/flickr.png" alt="Flickr" /><img src="images/rss.png" alt="RSS" /></p>
+                    
                 </aside>
             </section>
             
             <footer>
                 <div id="tweet">
-                    <h1>My last tweet</h1>
+                    <h1>My tweets</h1>
                     <p>Hee-haw!</p>
                     <p>12/05 23:12</p>
+                    <p>Yeeha!</p>
+                    <p>12/04 22:30</p>  
                 </div>
 				<div id="my_pictures">
-                    <h1>My pictures</h1>
+                    <h1>My images</h1>
                     <p><img src="images/pic1.jpg" alt="Picture" /><img src="images/pic2.jpg" alt="Picture" /><img src="images/pic3.jpg" alt="Picture" /><img src="images/pic4.jpg" alt="Picture" /><img src="images/petrer.jpg" alt="Picture"/></p>
                 </div>
                 <div id="my_friends">
